FE-068 add private photo feedback (#69)
